# paper_v_20260625

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  PACKAGE_MANIFEST.json  README.md  REVISION_NOTES.md  THIRD_PARTY_NOTICES.md  UPSTREAM_SOURCES.md  pyproject.toml
TASKS/: TASK-000_REPOSITORY_AUDIT.md  TASK-001_DATA_CONTRACTS_AND_SPLITS.md  TASK-002_VARIABLE_METADATA_SCHEMA.md  TASK-003_CANDIDATE_UNIVERSE_BUILDER.md  TASK-004_GDN_CANDIDATE_EXTRACTION.md  TASK-005_KILL_TEST_CANDIDATE_FEASIBILITY.md  TASK-006_RELATION_PROFILING_AND_CALIBRATION.md  TASK-007_MINIMAL_DSL_AND_SCHEMA_REGISTRY.md  TASK-008_TEMPLATE_RULE_BUILDER.md  TASK-009_DETERMINISTIC_VERIFIER.md  TASK-010_RUNTIME_RULE_ENGINE.md  TASK-011_END_TO_END_TEMPLATE_FEASIBILITY.md  TASK-012_LLM_RULE_PLANNER.md  TASK-013_VERIFIER_FEEDBACK_REFINER_LOOP.md  TASK-014_EVALUATION_AND_OPTIONAL_FUSION.md  TASK-015_DEC007_OFFICIAL_SWAT_PROVENANCE.md  TASK-016_KAGGLE_SWAT_STAGING_ADAPTER.md  TASK-017_KAGGLE_STAGING_PIPELINE_DRY_RUN.md  TASK-018_SUPPORT_AWARE_KAGGLE_STAGING_SLICE_SELECTION.md  TASK-019_STAGING_VERIFIED_RULE_EVIDENCE_AUDIT.md  TASK-020_STAGING_RULE_ROBUSTNESS_AND_SYNTHETIC_REPLAY.md  TASK-021_STAGING_MILESTONE_CONSOLIDATION.md  TASK-022_ARGOS_REPRODUCTION_AUDIT.md  TASK-023_ARGOS_HISTORICAL_ALIGNMENT_AND_OFFLINE_HARNESS.md  TASK-024_KPI_DATASET_AND_SANDBOX_SMOKE.md  TASK-025_ARGOS_PROMPT_FIDELITY_AND_PROVIDER_CAPTURE.md  TASK-026Q_POST_QUOTA_CAPTURE.md  TASK-026R_LUNA_CAPTURE_REMEDIATION.md  TASK-026_ONE_SHOT_REAL_LLM_CAPTURE.md  TASK-027_CAPTURED_RULE_SEMANTIC_AUDIT_AND_SANDBOX_READINESS.md  (+30 more)
(+898 files in other folders)
