[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperworks"
version = "0.1.0"
description = "Feasibility-first verified rule construction prototype scaffolding."
requires-python = ">=3.11"
dependencies = [
    "torch==2.12.1",
    "torch-geometric==2.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
